taskapp/workbench/k8s/gke/05_api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: taskapp
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: nginx-api
          # ①-1 APIサーバのリバースプロキシの完成イメージを利用
          image: ghcr.io/gihyodocker/taskapp-nginx-api:v1.0.0
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
          readinessProbe: # APIサーバの準備完了を確認
            httpGet:
              path: /healthz
              port: 80
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
          # ①-2 APIサーバの完成イメージを利用
        - name: api
          image: ghcr.io/gihyodocker/taskapp-api:v1.0.0
          ports:
            - containerPort: 8180
          args:
            - "server"
            # ③-3 マウントされた設定ファイルのパスを指定
            - "--config-file=/run/secrets/api/api-config.yaml"
          volumeMounts:
            # ③-2 APIサーバの設定ファイルを持つボリュームをマウント
            - name: api-config
              mountPath: "/var/run/secrets/api"
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8180
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8180
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        # ③-1 SecretからAPIサーバの設定ファイルを持つボリュームを設定
        - name: api-config
          secret:
            secretName: api-config
            items:
              - key: api-config.yaml
                path: api-config.yaml

---
# ④ APIサーバのPodへトラフィックを流すService
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: taskapp
  labels:
    app: api
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: api
