taskapp/workbench/k8s/gke/gke-ingress.yaml
# GKE Ingress
# https://cloud.google.com/kubernetes-engine/docs/how-to/load-balance-ingress?hl=ja

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  labels:
    app: web
  namespace: taskapp
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: web
                port:
                  number: 80
